--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,8 +4,8 @@
   "description": "Text Editor - Demo for the HTML5 Native File System.",
   "start_url": "./",
   "display": "standalone",
-  "theme_color": "#1a237e",
-  "background_color": "#e8eaf6",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "icons": [
     {
       "src": "./images/icon-192.png",
