--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,12 +8,12 @@
   "background_color": "#000000",
   "icons": [
     {
-      "src": "./images/icon-192.png",
+      "src": "",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./images/icon-512.png",
+      "src": "",
       "sizes": "512x512",
       "type": "image/png"
     }
