--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "text-editor",
-  "description": "Text Editor - Demo for the HTML5 Native File System.",
+  "description": "Text Editor - TinyMCE + PWA + NFS.",
   "version": "0.0.12",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GoogleChromeLabs/text-editor.git"
+    "url": "https://github.com/Alyw234237/text-editor.git"
   },
-  "homepage": "https://googlechromelabs.github.io/text-editor/",
+  "homepage": "https://github.com/Alyw234237/",
   "browserslist": [
     "last 2 versions"
   ],
