--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Text Editor",
-  "short_name": "TextEdit",
-  "description": "Text Editor - PWA + TinyMCE + NFS.",
+  "name": "Markdown WYSIWYG Editor",
+  "short_name": "Markdown WYSIWYG Editor",
+  "description": "\"Markdown WYSIWYG Editor\" (temporary name) is a simple web rich-text/WYSIWYG markdown editor.",
   "start_url": "./",
   "display": "standalone",
   "lang": "en-US",
@@ -21,19 +21,19 @@
   ],
   "file_handlers": [
     {
-      "action": "/text-editor/",
+      "action": "/md-wysiwyg-editor/",
       "accept": {
         "text/markdown": [".md", ".markdown"]
       }
     },
     {
-      "action": "/text-editor/",
+      "action": "/md-wysiwyg-editor/",
       "accept": {
         "text/plain": [".txt", ".text"]
       }
     },
     {
-      "action": "/text-editor/",
+      "action": "/md-wysiwyg-editor/",
       "accept": {
         "text/html": [".html", ".htm"]
       }
