--- a/package.json
+++ b/package.json
@@ -1,49 +1,16 @@
 {
   "name": "md-wysiwyg-editor",
+  "version": "1.0.0",
   "description": "\"Markdown WYSIWYG Editor\" (temporary name) is a simple web rich-text/WYSIWYG markdown editor.",
-  "version": "0.0.12",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Alyw234237/md-wysiwyg-editor.git"
+    "url": "git+https://github.com/Alyw234237/md-wysiwyg-editor.git"
   },
-  "homepage": "https://github.com/Alyw234237/",
-  "browserslist": [
-    "last 2 versions"
-  ],
-  "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/preset-env": "^7.5.2",
-    "babel-eslint": "^10.0.2",
-    "del": "^5.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-google": "^0.13.0",
-    "eslint-plugin-html": "^6.0.0",
-    "fs-extra": "^8.1.0",
-    "gh-pages": "^2.0.1",
-    "gulp": "^4.0.2",
-    "gulp-connect": "^5.7.0",
-    "gulp-copy": "^4.0.1",
-    "gulp-csso": "^3.0.1",
-    "gulp-eslint": "^6.0.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-inline-source": "^4.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-terser": "^1.2.0",
-    "semver": "^6.2.0",
-    "workbox-build": "^4.3.1"
+  "author": "Aly W.",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/Alyw234237/md-wysiwyg-editor/issues"
   },
-  "eslintIgnore": [
-    "idb-keyval-iife.js"
-  ],
-  "scripts": {
-    "build": "gulp build",
-    "build-prod": "gulp buildProd",
-    "clean": "gulp clean",
-    "deploy": "gulp deployProd",
-    "lint": "gulp lint",
-    "serve": "gulp serve",
-    "serve-prod": "gulp serveProd",
-    "start": "gulp serve"
-  }
+  "homepage": "https://github.com/Alyw234237/md-wysiwyg-editor#readme"
 }
 
